[package]
name = "api"
version = "0.1.0"
authors = ["Alejandro Martinez Ruiz <alex@flawedcode.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "^1"
clap = { git = "https://github.com/clap-rs/clap" }
human-panic = "^1"
rustyline = "^6"
straitjacket = { path = "../straitjacket" }
console = "^0.11"
indicatif = "^0.14"
dialoguer = "^0.6"
rand = "^0.7"
serde_json = "^1"

[build-dependencies]
vergen = "^3"
autocfg = "^1"

[dev-dependencies]
pretty_assertions = "^0.6"

[profile.release]
lto = "fat"
codegen-units = 1